chore: change theme color in index.html and manifest.json
style: enhance App styling with new gradients and button effects

refactor: improve Header component with active link styles and logo extraction

style: update theme colors and gradients for a cohesive design

fix: adjust logo component for better accessibility and visual appeal

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     
     <!-- PWA Meta Tags -->
     <meta name="description" content="RewardFlow - Modern task management platform with Web3 integration, AI-powered features, and real-time collaboration" />
-    <meta name="theme-color" content="#6366f1" />
+    <meta name="theme-color" content="#85409D" />
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
